--- a/imagetr.html
+++ b/imagetr.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>LeatherKeycap_test</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <!-- style for the loader -->
     <style>
       .arjs-loader {
         height: 100%;
@@ -13,12 +14,13 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: rgba(255, 255, 255, 0.2);
         z-index: 9999;
         display: flex;
         justify-content: center;
         align-items: center;
       }
+
       .arjs-loader div {
         text-align: center;
         font-size: 1.25em;
@@ -31,11 +33,12 @@
         <div class="arjs-loader">
             <div>Loading, please wait...</div>
         </div>
-        <a-scene
-        vr-mode-ui="enabled: false;"
-        renderer="logarithmicDepthBuffer: true;"
-        embedded
-        arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
+    
+      <a-scene
+      vr-mode-ui="enabled: false;"
+      renderer="logarithmicDepthBuffer: true;"
+      embedded
+      arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
             <a-nft
                 type="nft"
                 url="LeatherKeycap"
