--- a/imagetr.html
+++ b/imagetr.html
@@ -41,7 +41,7 @@
       arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
             <a-nft
                 type="nft"
-                url="https://github.com/ataruno/LeatherKeycap/tree/main/LeatherKeycap"
+                url="https://ataruno.github.io/LeatherKeycap/LeatherKeycap"
                 smooth="true"
                 smoothCount="10"
                 smoothTolerance=".01"
