--- a/imagetr.html
+++ b/imagetr.html
@@ -47,7 +47,8 @@
                 smoothTolerance=".01"
                 smoothThreshold="5">
                  <!-- <a-entity gltf-model="aaaaa.gltf" scale="5 5 5" position="150 300 -100" ></a-entity> -->
-                <a-obj-model position="0 1 0" src="https://raw.githubusercontent.com/ataruno/LeatherKeycap/main/testbox.obj" mtl="https://raw.githubusercontent.com/ataruno/LeatherKeycap/main/testbox.mtl"></a-obj-model>
+                 <!-- <a-obj-model position="0 1 0" src="https://raw.githubusercontent.com/ataruno/LeatherKeycap/main/testbox.obj" mtl="https://raw.githubusercontent.com/ataruno/LeatherKeycap/main/testbox.mtl"></a-obj-model> -->
+                 <a-box color="red" depth="100" height="100" width="100"></a-box> 
             </a-nft>
             <a-entity camera></a-entity>
         </a-scene>
